--- a/vignettes/docker.Rmd
+++ b/vignettes/docker.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Install tidymass"
+title: "Install docker version of tidymass"
 author:
 - name: Xiaotao Shen (https://www.shenxt.info/)
-date: "Created on 2021-12-04 and updated on `r Sys.Date()`"
+date: "Created on 2022-02-18 and updated on `r Sys.Date()`"
 output:
   html_document:
     df_print: paged
@@ -10,7 +10,7 @@ output:
   pdf_document:
     toc: no
 vignette: >
-  %\VignetteIndexEntry{tidymass_install}
+  %\VignetteIndexEntry{docker}
   %\VignettePackage{tidymass}
   % \VignetteEngine{knitr::rmarkdown}
   % \usepackage[utf8]{inputenc}
@@ -27,150 +27,53 @@ knitr::opts_chunk$set(
 )
 ```
 
----
+Docker is a set of platform as a service (PaaS) products that use OS-level virtualization to deliver software in packages called containers. So it is useful for people who want to share the code, data, and even analysis environment with other people to repeat their analysis and results.
 
-## **Uninstall `tidyTools` and `metID`**
+We provide a docker version of `tidymass`, all the packages in `tidymass` and the dependent packages have been installed.
 
----
 
-`tinyTools` has been renamed as `tinytools` and `metID` has been renamed as `metid`. So please uninstall them before you install `tidymass`. **And don't use them any more.**
+# **Install docker**
 
-1. detach them by:
+Please refer to the [offical website](https://www.docker.com/get-started) to download and install docker. And then run docker.
 
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-detach("package:tinyTools")
-detach("package:metID")
-```
+![](figures/Screen-Shot 4.png)
 
-2. Remove them by:
+# **Pull the tidymass image**
 
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-remove.packages(pkgs = "tinyTools")
-remove.packages(pkgs = "metID")
-```
-
-3. Restart your R session. 
-
-> If there are errors, ignore them.
-
-## **Install `tidymass` from github**
-
-You can just use the `devtools` or `remote` to install `tidymass`. 
-
-Please update `devtools` first and then restart your r session.
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-install.packages("devtools")
-```
-
-Then install `tidymass`:
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-devtools::install_github("tidymass/tidymass", dependencies = TRUE)
-```
-
-In the installation, it will ask if you want to update some packages for few times, just enter `enter` key to skip it.
-
-If there is a error like below:
+Open you terminal and then type code below:
 
 ```
-Error: Failed to install 'tidymass' from GitHub: HTTP error 403. API rate limit exceeded for 171.66.10.237. (But here's the good news: Authenticated requests get a higher rate limit. Check out the documentation for more details.)
+docker pull jaspershen/tidymass:latest
 ```
 
-Try to resolve it by:
+# **Run tidymass docker image**
 
-1. In you R console, type this code:
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-usethis::create_github_token()
-```
-
-It will open a page in browser, and create a "New personal access token" and copy it.
-
-![](figures/Screen-Shot-2021-12-24-at-9.28.18-PM.png)
-
-2. Then type this code:
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-usethis::edit_r_environ()
-```
-
-and then add one line like below:
+In you terminal, run the code below:
 
 ```
-GITHUB_PAT=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
-```
-> The `GITHUB_PAT` should be yours that is created in step 1.
-
-And then restart R session and try again.
-
----
-
-## **Install tidymass packages one by one**
-
----
-
-If you use the windoes os and the dependencies can not be installed, try to install all the `tidymass` packages one by one.
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-devtools::install_github("tidymass/tinytools", dependencies = TRUE)
-devtools::install_github("tidymass/massdataset", dependencies = TRUE)
-devtools::install_github("tidymass/demodata", dependencies = TRUE)
-devtools::install_github("tidymass/massqc", dependencies = TRUE)
-devtools::install_github("tidymass/massprocesser", dependencies = TRUE)
-devtools::install_github("tidymass/masscleaner", dependencies = TRUE)
-devtools::install_github("tidymass/massstat", dependencies = TRUE)
-devtools::install_github("tidymass/metid", dependencies = TRUE)
-devtools::install_github("tidymass/metpath", dependencies = TRUE)
+docker run -e PASSWORD=tidymass -p 8787:8787 jaspershen/tidymass:latest
 ```
 
-[Let me know if you have any questions](shenxt1990@outlook.com).
-
----
-
-## **Frequently Asked Questions**
-
----
-
-1. Can not install dependent packages `raster` and `Cario`
-
-`raster` is a package in [CRAN](https://cran.r-project.org/web/packages/raster/index.html), try to install it first and then install `tidymass`.
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-install.packages("raster")
-```
-
-
-`Cario` is a package in [CRAN](https://cran.r-project.org/web/packages/Cairo/index.html), try to install it first and then install `tidymass`.
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-install.packages("Cairo")
-```
-
-2. Error when install `massprocesser`
-
-The error is:
+The below command will link the RStudio home folder with the desktop of the local machine running the container. Anything saved or edited in the home folder when using the container will be stored on the local desktop.
 
 ```
-Error: .onLoad failed in loadNamespace() for 'affy', details:
-  call: assign(".affyInternalEnv", .affyInternalEnv, envir = topenv(parent.frame()))
-  error: cannot add binding of '.affyInternalEnv' to the base environment
-Execution halted
-ERROR: lazy loading failed for package 'massprocesser'
-* removing 'D:/R_packages/R4.0/library/massprocesser'
+docker run -e PASSWORD=tidymass -v ~/Desktop:/home/rstudio/ -p 8787:8787 jaspershen/tidymass:latest
 ```
 
-Just try to restart R and install `affy`.
+# **Open the Rstudio server**
 
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-BiocManager::install("affy")
-```
+Then open the browser and visit http://localhost:8787 to power on RStudio server. The user name is `rstudio` and the password is `tidymass`.
 
----
+![](figures/Screen-Shot 5.png)
+
+![](figures/Screen-Shot 6.png)
+
+![](figures/Screen-Shot 7.png)
+
+![](figures/Untitled.gif)
 
 ## **Session information**
 
----
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 sessionInfo()
