--- a/vignettes/whole_workflow.Rmd
+++ b/vignettes/whole_workflow.Rmd
@@ -5,6 +5,7 @@ author:
 date: "Created on 2022-02-18 and updated on `r Sys.Date()`"
 output:
   html_document:
+    number_sections: true
     df_print: paged
     toc: yes
   pdf_document:
