update the docker page

--- a/vignettes/docker.Rmd
+++ b/vignettes/docker.Rmd
@@ -82,6 +82,61 @@ Open the `tidymass_demo.Rmd` file in `demo_data` folder, and then run it code ch
 
 ![](figures/Untitled 2.gif)
 
+# **Build your own images based on tidymass**
+
+## Create `dockerfile`
+
+Create a `dockerfile` without extension. And then open and modify it.
+
+```
+FROM jaspershen/tidymass:latest
+MAINTAINER "Xiaotao Shen" shenxt1990@outlook.com
+
+RUN apt-get update && apt-get install -y curl
+
+COPY demo_data/ /home/rstudio/demo_data/
+
+RUN chmod 777 /home/rstudio/demo_data/
+
+RUN R -e 'install.packages("remotes")'
+
+RUN R -e "remotes::install_gitlab('jaspershen/tidymass')"
+```
+
+If you want to install packages (for example ggraph) which are necessary for you analysis, please add a new line:
+
+```
+RUN R -e 'install.packages("ggraph")'
+```
+
+And you also need to copy your data to the image use the `COPY`.
+
+## Build image
+
+In the terminal, use below code to build the image.
+
+```
+docker build -t image-name -f Dockerfile .
+```
+
+Change the `image-name`.
+
+## Use the `docker tag` command to give the `tidymass` image a new name
+
+We need to create a account on the docker hub (https://hub.docker.com/) and then use the next code to link the local image to our account.
+
+```
+docker tag image-name your-account/image-name:latest
+```
+
+## Push image to docker hub
+
+```
+docker push your-account/image-name:latest
+```
+
+Then other people can download your image which contains your code, data and analysis enivorment, which make it is pretty easy to repeat your analysis and results.
+
 # **Session information**
 
 
